test/snapshot/gloo_gateway_e2e/artifacts/subset.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-gateway
  namespace: gloo-system
spec:
  gatewayClassName: gloo-gateway
  listeners:
    - name: http
      port: 8080
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http
  namespace: httpbin
spec:
  parentRefs:
    - name: example-gateway
      namespace: gloo-system
  hostnames: ["httpbin.example.com"]
  rules:
    - matches:
        - headers:
            - name: version
              value: v2
      backendRefs:
        - name: httpbin-v2
          port: 8000
    - backendRefs:
        - name: httpbin-v1
          port: 8000
